Fixing overflow display issues in edit panels

--- a/packages/optimise-ui/src/components/editMedicalElements/editMedicalElements.module.css
+++ b/packages/optimise-ui/src/components/editMedicalElements/editMedicalElements.module.css
@@ -20,6 +20,10 @@
     color: var(--color-background)
 }
 
+.panelWrapper {
+    position: relative;
+}
+
 .panel {
     grid-area: panel;
     display: block;
